--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": "15.x",
     "npm": "6.14.11"
   },
-  
+  "main": "server/index.js",
   "scripts": {
     "ng": "ng",
     "start": "node server/index.js",
