--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
   },
   "dependencies": {
+    "@angular/cli": "^11.0.2",
+    "@angular/compiler-cli": "^10.0.14",
+    "typescript": "~3.9.5",
     "@angular/animations": "11.0.4",
     "@angular/common": "11.0.4",
     "@angular/compiler": "11.0.4",
