--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 TIMES=2
+plugins: [
+        new webpack.DefinePlugin({
+            'process.env.NODE_ENV': JSON.stringify('production')
+        })
+    ],
